# gan-mapper

./: .gitignore  README.md  pyproject.toml  wsgi.py
app/: __init__.py  routes.py
app/lpips/: __init__.py  dist_model.py  networks_basic.py
app/stylegan2/: __init__.py  model.py  projector.py  thing.py
app/templates/: index.html  projector.html
