[tool.poetry]
name = "gl-frontend-flask-backend"
version = "0.1.0"
description = ""
authors = ["Josh Murr <joshuadavidmurr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
torch = "^1.10.1"
torchvision = "^0.11.2"
Pillow = "^9.0.0"
scikit-image = "^0.19.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
